--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h3>This is first time using GitHub!</h3>
             </div>
             <div class="codys-styles">
-                <h3>That's very exciting!</h3>
+                <h3>That's very exciting!!</h3>
             </div>
         </section>
     </main>
